WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204208
Crash when setting HTMLInputElement.checked for a disconnected radio button in a shadow root
https://bugs.webkit.org/show_bug.cgi?id=204208
Summary
Crash when setting HTMLInputElement.checked for a disconnected radio button i...
Wenson Hsieh
Reported
2019-11-14 16:22:45 PST
<
rdar://problem/57045830
>
Attachments
Patch
(4.77 KB, patch)
2019-11-14 16:59 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-11-14 16:59:14 PST
Created
attachment 383586
[details]
Patch
WebKit Commit Bot
Comment 2
2019-11-14 19:26:59 PST
Comment on
attachment 383586
[details]
Patch Clearing flags on attachment: 383586 Committed
r252478
: <
https://trac.webkit.org/changeset/252478
>
WebKit Commit Bot
Comment 3
2019-11-14 19:27:01 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-11-14 19:27:16 PST
Comment hidden (obsolete)
<
rdar://problem/57214571
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug